
2011-12-26  Christopher Michael (devilhorns)

        * Add Ecore_X function to return the keycode from a given keyname.

2012-02-06  Jihoon Kim (jihoon)

        * Set ECORE_IMF_INPUT_PANEL_LAYOUT_NORMAL as default layout in ecore_imf_context_add.
        * Add Ecore_IMF function to set or get the input panel-specific data.

2012-02-07  Jihoon Kim (jihoon)

        * Support ecore_imf_context_input_panel_show/hide in XIM and SCIM module.

2012-02-08 Carsten Haitzler (The Rasterman)

        * Add ecore_con_url_http_version_set() to set url request version

2012-02-09  Jihoon Kim (jihoon)

        * Provide compose, string in key down/up event in case of scim-input-pad.

2012-02-10  Christopher Michael (devilhorns)

        * Add Ecore_Evas function to allow setting a mouse pointer from efl/elm wayland clients.

2012-02-15  Jihoon Kim (jihoon)

        * Add ecore_imf APIs to set return key type, disable return key.

2012-02-16  Leif Middelschulte (T_UNIX)

        * Add ecore_x_randr_mode_add to add a mode to a display
        * Add ecore_x_randr_mode_del to remove a mode from the display
        * Add ecore_x_randr_output_mode_add to add a mode to an output
        * Add ecore_x_randr_output_mode_del to remove a mode from an output

2012-02-10  Jérémy Zurcher

        * Improve callbacks in ecore_evas to use typedefs for readability.

2012-02-20  Cedric Bail

	* Rewrite internal of Ecore_Thread to use Eina_Lock and ecore_main_loop_thread_safe_call_async.

2012-02-23  Cedric Bail

	* Move to Evas buffer engine for Ecore_Evas SDL software backend.

2012-02-23  Leif Middelschulte (T_UNIX)

        * Add ecore_x_randr_window_crtcs_get to get the crtcs that display a
		window.
        * Deprecate ecore_x_randr_current_output_get. Use
		ecore_x_randr_window_crtcs_get instead.

2012-02-24  Doyun Kang

	* Add indicator controls to ecore_x

2012-02-26 Carsten Haitzler (The Rasterman)

        * Fix ecore_file_download to not limit downloads to 30sec.
